--- a/form.html
+++ b/form.html
@@ -17,8 +17,15 @@
             </li>
             <li><a href="form.html">Sign In</a>
             </li>
-            <li><a href="table.html">About Our Devleoper</a></li>
-        </ul>
+            <li><a href="table.html">About Our Devleoper
+                    <ul class="dropdown">
+                        <li><a href="https://web.programming-hero.com/">Programming-hero</a></li>
+                        <li><a href="https://github.com/">Github</a></li>
+                        <li><a href="https://www.facebook.com/fatiur.parsonal">My Facebook</a></li>
+                        <li><a href="">About-4</a></li>
+
+                    </ul>
+            <li><a href="videos.html">Islamic Videos</a></li>
     </nav>
 
     <h1>This class is form Creation </h1>
