--- a/table.html
+++ b/table.html
@@ -17,6 +17,7 @@
             </li>
             <li><a href="form.html">Sign In</a>
             </li>
+            <li><a href="videos.html">Islamic Videos</a></li>
             <li><a href="table.html">About Our Devleoper
                     <ul class="dropdown">
                         <li><a href="https://web.programming-hero.com/">Programming-hero</a></li>
