--- a/videos.html
+++ b/videos.html
@@ -6,9 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Islamic Vedio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li><a href="form.html">Sign In</a>
+            </li>
+            <li><a href="table.html">About Our Devleoper
+                    <ul class="dropdown">
+                        <li><a href="https://web.programming-hero.com/">Programming-hero</a></li>
+                        <li><a href="https://github.com/">Github</a></li>
+                        <li><a href="https://www.facebook.com/fatiur.parsonal">My Facebook</a></li>
+                        <li><a href="">About-4</a></li>
+                        <li><a href="videos.html">Islamic Videos</a></li>
+                    </ul>
+    </nav>
     <h2>Sura Hasor</h2>
     <video src="media/videos/sura hasorer ses 3 ayat.mp4" controls></video>
 </body>
